--- a/house credit risk.ipynb
+++ b/house credit risk.ipynb
@@ -1967,14 +1967,14 @@
     "# iterate through the sources\n",
     "for i, col_name in enumerate(['EXT_SOURCE_1', 'EXT_SOURCE_2', 'EXT_SOURCE_3']):\n",
     "    \n",
-   
+    "    # create a new subplot for each source\n",
     "    plt.subplot(3, 1, i + 1)\n",
-    
+    "    # plot repaid loans\n",
     "    sns.kdeplot(application_train.loc[application_train['TARGET'] == 0, col_name], label = 'Loan Repaid')\n",
-    
+    "    # plot loans that were not repaid\n",
     "    sns.kdeplot(application_train.loc[application_train['TARGET'] == 1, col_name], label = 'Not Repaid')\n",
     "    \n",
-    "    
+    "    # Label the plots\n",
     "    plt.title('Distribution of {0} by Target Value'.format(col_name))\n",
     "    plt.xlabel('%s' % col_name); plt.ylabel('Density');\n",
     "    \n",
